# solana-testing

./: README.md
accounts/create-sys-account/: README.md  cicd.sh
accounts/create-sys-account/pocs/: Cargo.toml
accounts/create-sys-account/program/src/: lib.rs
accounts/rent/: README.md  cicd.sh
accounts/rent/program/src/: lib.rs
accounts/transfer/: README.md
basics/custom-instruction-data/: README.md
basics/custom-instruction-data/pocs/: Cargo.toml
basics/recommended-program-layout/: README.md
neodyme-hack/workshop/level0-hack/pocs/: Cargo.toml
tokens/: README.md
tokens/mint/: README.md
tokens/mint-2/: README.md  cicd.sh
tokens/mint-2/pocs/: Cargo.toml
tokens/mint-to/: README.md  cicd.sh
tokens/mint-to/pocs/: Cargo.toml
tokens/mint-to/tests/: test.ts
tokens/mint/pocs/: Cargo.toml
tokens/mint/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-5ZTMvfxy5RHwcn9Qt7ksiAtE9aMnG3chsFj4vtVTTo2N.tar.bz2  snapshot-300-83fzTVd1BBo3PNUJDUZVLDcpoChkczCASTnnA8jsLeUd.tar.bz2  snapshot-400-AmkXGS67FAQe7d2qYXLBr6q658bpueHHJ4y4JCdcyuG7.tar.bz2  validator-keypair.json  vote-account-keypair.json
tokens/mint/test-ledger/accounts/: 0.5  100.0  113.6  128.6  18.4  19.4  200.7  230.8  300.9  31.3  32.2  329.10  33.1  33.2  35.1  400.11  414.12
tokens/mint/test-ledger/rocksdb/: 000083.sst  000084.sst  000085.sst  000086.sst  000087.sst  000088.sst  000089.sst  IDENTITY  LOG  LOG.old.1658843711879995  LOG.old.1658871221231874  MANIFEST-000090
tokens/mint/test-ledger/snapshot/100/: 100
tokens/mint/test-ledger/snapshot/200/: 200
tokens/mint/test-ledger/snapshot/300/: 300
tokens/mint/test-ledger/snapshot/400/: 400
tokens/mint/tests/: test.ts
