[package]
name = "pocs"
version = "0.1.0"
edition = "2018"


[dependencies]
poc-framework = { version = "0.1.6" }
owo-colors = "3.1.0"

[lib]

[patch.crates-io]
poc-framework = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/poc-framework-0.1.6/" }
solana-runtime = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-runtime-1.11.2/"}
solana-program = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-program-1.11.2/" }
solana-bpf-loader-program = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-bpf-loader-program-1.11.2/" }
