[package]
name = "pocs"
version = "0.1.0"
edition = "2018"


[dependencies]
poc-framework = { version = "0.1.6" }
owo-colors = "3.1.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"
#spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
#mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
#spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }


[lib]

[patch.crates-io]
poc-framework = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/poc-framework-0.1.6/" }
solana-runtime = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-runtime-1.11.2/"}
solana-program = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-program-1.11.2/" }
solana-bpf-loader-program = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-bpf-loader-program-1.11.2/" }
spl-token = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/spl-token-3.2.0/" }
mpl-token-metadata = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/mpl-token-metadata-1.3.3/" }
spl-associated-token-account = { path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/spl-associated-token-account-1.0.5" } 
